--- a/app/sass/base/_base.scss
+++ b/app/sass/base/_base.scss
@@ -1,7 +1,7 @@
 html {
     width: 100%;
     height: 100%;
-    font-size: rem(16px);
+    font-size: 100%;
 
     @media (max-width: 1200px) {
         font-size: 1.5vw;
@@ -49,5 +49,5 @@ body {
     width: 100%;
     max-width: 1200px;
     margin: 0 auto;
-    padding: 0 em($layout-padding-h);
+    padding: 0 rem($layout-padding-h);
 }
