--- a/app/sass/utilities/_margins.scss
+++ b/app/sass/utilities/_margins.scss
@@ -1,6 +1,6 @@
 .no {
-    &-margin-top { margin-top: 0; }
-    &-margin-right { margin-right: 0; }
-    &-margin-bottom { margin-bottom: 0; }
-    &-margin-left { margin-left: 0; }
+    &-margin-top { margin-top: 0!important; }
+    &-margin-right { margin-right: 0!important; }
+    &-margin-bottom { margin-bottom: 0!important; }
+    &-margin-left { margin-left: 0!important; }
 }
